--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,9 @@
-# Web framework and server
-fastapi==0.104.1
-uvicorn==0.23.2
-python-multipart==0.0.6
 
-# Data processing
-pandas==2.1.1
-openpyxl==3.1.2
-xlsxwriter==3.1.9
-python-docx==0.8.11
-PyPDF2==3.0.1
-
-# HTTP requests
-requests==2.31.0
-
-# Azure services
-azure-ai-formrecognizer==3.3.0
-azure-storage-blob==12.18.3
-
-# Utilities
-python-dotenv==1.0.0
-aiofiles==23.2.1
-pydantic==2.4.2
+fastapi==0.115.11
+numpy==2.2.3
+pandas==2.2.3
+pydantic==2.10.6
+pydantic_core==2.27.2
+python-multipart==0.0.20
+requests==2.32.3
+uvicorn==0.34.0
