--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ python-multipart==0.0.20
 requests==2.32.3
 uvicorn==0.34.0
 XlsxWriter==3.2.0
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
+
